# AiMedRes

./: .coverage  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  =0.11.0  =1.0.0  =10.0.0  ALS_TRAINING_GUIDE.md  ALS_TRAINING_RUN_SUMMARY.md  ALZHEIMER_TRAINING_RUN_SUMMARY.md  ARCHITECTURE_REFACTOR_PLAN.md  BRAIN_MRI_TRAINING_GUIDE.md  CARDIOVASCULAR_TRAINING_SUMMARY.md  CHANGELOG.md  CLEANUP_COMPLETE.md  CLEANUP_SUMMARY.md  COMMAND_VERIFICATION_SUMMARY.md  COMPREHENSIVE_TRAINING_DOCUMENTATION.md  CONFLICT_RESOLUTION.md  CONSOLIDATION_SUMMARY.md  CONTRIBUTING.md  DIABETES_TRAINING_SUMMARY.md  Dockerfile  ENHANCED_FEATURES_DOCUMENTATION.md  EXECUTION_SUMMARY_P1-P5.md  FEATURE_STATUS.md  FINAL_SUMMARY.md  FULL_TRAINING_GUIDE.md  GUI.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_COMPLETE_P12_P13_P14.md  IMPLEMENTATION_COMPLETE_P15_P16_P17.md  IMPLEMENTATION_COMPLETE_P18_P19_P20.md  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_SUMMARY.md  ISSUE_RESOLUTION_SUMMARY.md  MLOPS_ARCHITECTURE.md  MODEL_CARD_IMAGING.md  MONITORING_ENHANCEMENTS.md  (+189 more)
.github/: FUNDING.yml  WORKFLOW_ARCHITECTURE.md  WORKFLOW_QUICK_START.md  docker-compose.yml
.test_env/: pyvenv.cfg
Parkinson/: clinical_decision_support.py
ParkinsonDatasets/: AV-133_Prodromal_Substudy_VMAT-2_Imaging_01Oct2025.csv  CT_Scan_01Oct2025.csv  Magnetic_Resonance_Imaging__MRI__01Oct2025.csv  NX_PI-2620_Tau_Imaging_Substudy_Imaging_01Oct2025.csv  PET_Acquisition_Metadata_01Oct2025.csv  PET_SBR_Analysis_01Oct2025.csv  README.md  SV2A_PET_SUVR_Analysis_01Oct2025.csv  Xing_Core_Lab_-_MRI_acquisition_metadata_01Oct2025.csv
agent_memory/: README.md  __init__.py  embed_memory.py  imaging_insights.py  live_reasoning.py  memory_consolidation.py  run_all_demos.py
als_classification_final/: summary_report.txt  training_report.json
als_test_outputs/: summary_report.txt  training_report.json
api/: canary_routes.py  quantum_routes.py  routes.py  viewer_api.py  visualization_api.py
audit_logs/: audit_chain.jsonl
configs/: README.md
dataset/: kaggle.json
datasets/: datasets.md
debug/: PHASE10_SUMMARY.md  PHASE7_README.md  PHASE8_SUMMARY.md  PHASE9_SUMMARY.md  README.md  debuglist.md  environment_snapshot.json  phase10_final_validation.py  phase10_results.json  phase1_environment_debug.py  phase1_results.json  phase2_data_integrity_debug.py  phase2_preparation.py  phase2_results.json  phase3_code_improvements.py  phase3_code_sanity_debug.py  phase4_model_architecture_debug.py  phase4_results.json  phase6_hyperparameter_tuning.py  phase6_results.json  phase7_model_training_evaluation.py  phase7_results.json  phase8_model_visualization.py  phase8_results.json  phase9_error_analysis_edge_cases.py  phase9_results.json  validate_phase3.py
deployment/: IMPLEMENTATION_COMPLETE.md  README.md
docs/: ALS_TRAINING_GUIDE.md  ALS_TRAINING_README.md  API_REFERENCE.md  API_SECURITY_COMPLIANCE.md  AUTOMATION_SCALABILITY.md  BATCH_PARAMETER_IMPLEMENTATION.md  BRAIN_MRI_TRAINING_IMPLEMENTATION.md  CARDIOVASCULAR_TRAINING_SUMMARY.md  CLINICAL_DECISION_SUPPORT_README.md  CLINICAL_VALIDATION_FRAMEWORK.md  CLI_TRAINING_GUIDE.md  COMPREHENSIVE_TRAINING_DOCUMENTATION.md  COMPREHENSIVE_TRAINING_TEST_SUMMARY.md  CONSOLIDATION_SUMMARY.md  DATA_HANDLING_PROCEDURES.md  DATA_IMBALANCE_RESOLUTION.md  ENHANCED_FEATURES_DOCUMENTATION.md  ENHANCED_MEMORY_CONSOLIDATION_README.md  FULL_TRAINING_GUIDE.md  IMAGING_DEIDENTIFICATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  KNOWN_LIMITATIONS.md  LEGAL_SIGNOFF.md  MLOPS_ARCHITECTURE.md  MODEL_CARD_IMAGING.md  MONITORING_ENHANCEMENTS.md  P0_IMPLEMENTATION_SUMMARY.md  P3_IMPLEMENTATION_GUIDE.md  PARALLEL_6WORKERS_50EPOCHS_5FOLDS.md  PARALLEL_MODE_README.md  PARKINSONS_TRAINING_README.md  PARKINSON_ALS_CLINICAL_DECISION_SUPPORT_README.md  PERFORMANCE_SLOS.md  PERFORMANCE_TESTING.md  PHASE2B_SECURITY_GUIDE.md  PROBLEM_STATEMENT_GUIDE.md  PROBLEM_STATEMENT_SOLUTION.md  PRODUCTION_CONFIG_IMPLEMENTATION.md  PRODUCTION_MLOPS_GUIDE.md  (+24 more)
examples/: README.md  demo_automation_scalability.py  demo_simulation_dashboard.py  enhanced_features_demo.py  p0_requirements_demo.py  p3_features_demo.py  phase2b_security_demo.py  roadmap_demo.py  roadmap_p12_p13_p14_demo.py  roadmap_p15_p16_p17_demo.py  roadmap_p18_p19_p20_demo.py  roadmap_p8b_p9_demo.py  run_simulation.py  simple_integration_demo.py  simulation_dashboard.py  usage_diabetes_example.py  usage_examples.py
files/: __init__.py
final_parkinsons_results/: summary_report.txt  training_report.json
final_test_results/: summary_report.txt  training_report.json
frontend/: .eslintrc.cjs  .gitignore  README.md  cypress.config.ts  index.html  lighthouserc.json  package-lock.json  package.json  roadmap.md  tsconfig.json  vite.config.ts
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  postgres.yaml  pvc.yaml  secret.yaml  service.yaml
migrations/: 001_init.sql
mobile/: .gitignore  App.tsx  README.md  app.json  package-lock.json  package.json  tsconfig.json  vitest.config.ts
models/: comprehensive_medical_model.pkl  example_model.pkl
monitoring/: alertmanager.yml  docker-compose.observability.yml  prometheus.yml
parkinsons_leilahasan_results/: summary_report.txt  training_report.json
parkinsons_results/: summary_report.txt  training_report.json
parkinsons_training_results/: summary_report.txt  training_report.json
parkinsons_training_results_2/: summary_report.txt  training_report.json
scripts/: backfill_metadata.py  data_loaders.py  eval_alzheimers_structured.py  feature_hash.py  kaggle_dataset_loader.py  train_alzheimers_structured.py  validate_implementation.py
security/: __init__.py  ai_safety.py  blockchain_records.py  encryption.py  hipaa_audit.py  monitoring.py  performance_monitor.py  privacy.py  quantum_crypto.py  quantum_prod_keys.py  safety_checks.py  safety_monitor.py  validation.py  zero_trust.py
templates/: about.html  clinical_dashboard.html
test_als_output/: summary_report.txt  training_report.json
test_deployment/: Dockerfile  docker-compose.yml  grafana-dashboard.json  k8s-deployment.yaml  (+5 more)
(+572 files in other folders)
