[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aimedres"
version = "0.1.0"
description = "AiMedRes - AI Medical Research Assistant"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
  {name = "V1B3hR", email = "contact@example.com"}
]
keywords = ["ai", "healthcare", "medical-research", "machine-learning", "deep-learning"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Healthcare Industry",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
  "SQLAlchemy>=2.0.20",
  "psycopg2-binary>=2.9.9",
  "pgvector>=0.2.5",
  "sentence-transformers>=3.0.0",
  "PyYAML>=6.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-cov>=3.0.0",
  "black>=24.8.0",
  "isort>=5.13.2",
  "mypy>=1.11.1",
  "flake8>=7.0.0",
]
ml = [
  "numpy>=1.24.0",
  "pandas>=2.0.0",
  "scikit-learn>=1.3.0",
  "torch>=2.0.0",
  "tensorflow>=2.13.0",
]

[project.urls]
Homepage = "https://github.com/V1B3hR/AiMedRes"
Documentation = "https://github.com/V1B3hR/AiMedRes/wiki"
Repository = "https://github.com/V1B3hR/AiMedRes"
"Bug Tracker" = "https://github.com/V1B3hR/AiMedRes/issues"

[tool.black]
line-length = 100
target-version = ["py310"]
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | frontend
  | node_modules
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_glob = ["*/migrations/*", "frontend/*", "node_modules/*"]
known_first_party = ["aimedres"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = [
  "frontend/",
  "node_modules/",
  "build/",
  "dist/",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::PendingDeprecationWarning",
]
